--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@types/react-dom": "^17.0.14",
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
+    "firebase": "^8.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-id-generator": "^3.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
